Renamed previous sync progress items to notifications, and fixed alignment weirdness on the bottom of the progress notification

--- a/App/css/default.css
+++ b/App/css/default.css
@@ -208,7 +208,7 @@ button.win-command:focus {
     -ms-grid-rows: auto 8px 1fr;
 }
 
-.syncing-container {
+.notification-container {
     width: 100%;
 }
 
@@ -223,7 +223,7 @@ button.win-command:focus {
     -ms-grid-rows: 1fr;
 }
 
-    .signedIn-contentContainer.syncProgress-visible {
+    .signedIn-contentContainer.notification-visible {
         -ms-grid-row: 3;
         -ms-grid-row-span: 1;
     }
@@ -236,7 +236,7 @@ button.win-command:focus {
         -ms-grid-columns: 1fr;
     }
 
-.syncProgressAnimation {
+.notification-animation {
     transition-property: transform;
     transition-duration: 200ms;
 }
@@ -477,7 +477,7 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
         line-height: 30px;
     }
 
-.syncProgress-visible .win-surface {
+.notification-visible .win-surface {
     margin-top: -2px !important;
 }
 
@@ -486,7 +486,6 @@ signedIn-articleList .win-itemcontainer .win-focusedoutline {
     -ms-grid-rows: 36px;
     -ms-grid-columns: 12px auto 8px 1fr auto 16px;
     padding-top: 8px;
-    padding-bottom: 8px;
 }
 
     .syncProgress-root .syncProgress-progress,
